# stereo-ai

./: .gitignore  README.md  db.json  main.py  package-lock.json  package.json  pyproject.toml
app/: main.py
app/models/: main.py
backend/: .env.example  .eslintrc  .gitignore  package-lock.json  package.json
backend/src/: index.ts
backend/src/controllers/: civitai.controller.ts  generations.controller.ts  images.controller.ts  keywords.controller.ts  models.controller.ts  prompts.controller.ts
backend/src/db/: connection.ts  index.ts  init.ts  keywords.backup.sql
backend/src/interfaces/: civitai.interfaces.ts  keyword.interface.ts  model.interface.ts  routes.interfaces.ts
backend/src/middlewares/: errorHandler.ts  index.ts  notFound.ts
controllers/: __init__.py  generations.py  keywords.py
data/: models.json  positive_prompts.json
frontend/: package-lock.json  package.json  tailwind.config.js
generations/: __init__.py  main.py
keywords/: __init__.py  main.py
repositories/: keywords.json
routes/: generation.py  generations.py  keywords.py
schemas/: __init__.py  keyword.py
src/: app.js  main.py
src/controllers/: generations.controller.js  keywords.controller.js  models.controller.js
src/db/: db.js
src/middleware/: errorHandler.js  index.js  notFound.js
src/models/: __init__.py  keywords.model.js  main.py  models.model.js
src/routes/: generation.py  generations.js  index.js  keywords.js  models.js
src/services/: keyword.service.js  models.service.js
utils/: file.py  keywords.py  models.py  repository.py
(+31 files in other folders)
